fixed width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -585,5 +585,8 @@ section {
   .contact-form {
     order: 3;
   }
+  .large-pictures {
+    width: 100%;
+  }
 }
 
